--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "eslint-plugin-react": "^7.14.3",
     "metro-react-native-babel-preset": "^0.56.0",
     "prettier": "^1.18.2",
-    "react-native-dotenv": "^0.2.0"
+    "react-native-dotenv": "^0.2.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.9.3"
   },
   "private": true
 }
