--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.1.0",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "react-navigation-drawer": "^2.2.2"
   },
   "devDependencies": {
     "axios": "^0.19.0",
