--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.1.0",
     "react-native-web": "^0.11.4",
-    "react-navigation-drawer": "^2.2.2"
+    "react-navigation-drawer": "^2.2.2",
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
