--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-native-reanimated": "^1.1.0",
     "react-native-web": "^0.11.4",
     "react-navigation-drawer": "^2.2.2",
-    "react-native-maps": "~0.24.0"
+    "react-native-maps": "~0.24.0",
+    "expo-localization": "~6.0.0",
+    "expo-location": "~6.0.0",
+    "expo-permissions": "~6.0.0"
   },
   "devDependencies": {
     "axios": "^0.19.0",
