--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
   "dependencies": {
     "expo": "^34.0.1",
     "expo-google-app-auth": "^6.0.0",
+    "expo-localization": "~6.0.0",
+    "expo-location": "~6.0.0",
+    "expo-permissions": "~6.0.0",
     "expo-secure-store": "^6.0.0",
+    "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-maps": "~0.24.0",
     "react-native-reanimated": "^1.1.0",
     "react-native-web": "^0.11.4",
-    "react-navigation-drawer": "^2.2.2",
-    "react-native-maps": "~0.24.0",
-    "expo-localization": "~6.0.0",
-    "expo-location": "~6.0.0",
-    "expo-permissions": "~6.0.0"
+    "react-navigation-drawer": "^2.2.2"
   },
   "devDependencies": {
     "axios": "^0.19.0",
