--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "expo": "^34.0.1",
     "expo-google-app-auth": "^6.0.0",
     "expo-localization": "~6.0.0",
@@ -18,18 +19,21 @@
     "expo-permissions": "~6.0.0",
     "expo-secure-store": "^6.0.0",
     "native-base": "^2.13.8",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-maps": "~0.24.0",
     "react-native-reanimated": "^1.1.0",
     "react-native-web": "^0.11.4",
-    "react-navigation-drawer": "^2.2.2"
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.2.2",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
     "babel-preset-expo": "^6.0.0",
     "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -39,10 +43,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "metro-react-native-babel-preset": "^0.56.0",
-    "prettier": "^1.18.2",
-    "react-native-dotenv": "^0.2.0",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.9.3"
+    "prettier": "^1.18.2"
   },
   "private": true
 }
