--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.0",
     "axios": "^0.19.0",
     "expo": "^34.0.1",
     "expo-google-app-auth": "^6.0.0",
@@ -25,10 +26,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.24.0",
-    "react-native-reanimated": "^1.1.0",
-    "react-native-web": "^0.11.4",
+    "react-native-paper": "^3.2.1",
+    "react-native-reanimated": "~1.1.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.10.3"
@@ -43,7 +44,8 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "metro-react-native-babel-preset": "^0.56.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react-navigation-tabs": "^2.5.6"
   },
   "private": true
 }
