--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-reanimated": "~1.1.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "react-native-svg": "~9.5.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
