--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "eslint-plugin-react": "^7.14.3",
     "metro-react-native-babel-preset": "^0.56.0",
     "prettier": "^1.18.2",
-    "react-navigation-tabs": "^2.5.6"
+    "react-navigation-tabs": "^2.5.6",
+    "react-native-safe-area-view": "latest"
   },
   "private": true
 }
