--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "react-native-maps": "~0.24.0",
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.1.0",
+    "react-native-safe-area-context": "^0.6.4",
+    "react-native-svg": "~9.5.1",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^1.10.3",
-    "react-native-svg": "~9.5.1"
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
