--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-location": "~6.0.0",
     "expo-permissions": "~6.0.0",
     "expo-secure-store": "^6.0.0",
+    "lodash": "^4.17.15",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
