--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@react-navigation/drawer": "^5.0.0",
+    "@react-navigation/native": "^5.0.0",
     "axios": "^0.19.0",
     "expo": "^34.0.1",
     "expo-google-app-auth": "^6.0.0",
@@ -32,6 +34,7 @@
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.1.0",
     "react-native-safe-area-context": "^0.6.4",
+    "react-native-screens": "^2.0.0-beta.2",
     "react-native-svg": "~9.5.1",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
