--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "expo-google-app-auth": "^6.0.0",
+    "expo-image-picker": "~7.0.0",
     "expo-localization": "~7.0.0",
     "expo-location": "~7.0.0",
     "expo-permissions": "~7.0.0",
     "expo-secure-store": "~7.0.0",
     "expo-task-manager": "~7.0.0",
+    "form-data": "^3.0.0",
     "lodash": "^4.17.15",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
@@ -30,19 +32,20 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.25.0",
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.2.0",
-    "react-native-svg": "9.9.5",
     "react-native-safe-area-context": "~0.3.6",
+    "react-native-safe-area-view": "latest",
     "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-svg": "9.9.5",
     "react-native-webview": "7.0.5",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.5.6",
-    "react-native-safe-area-view": "latest"
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
