--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "react-native-maps": "~0.24.0",
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.1.0",
+    "react-native-screens": "^2.0.0-beta.2",
+    "react-native-webview": "^8.0.6",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^1.10.3",
-    "react-native-svg": "~9.5.1"
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
@@ -46,8 +47,8 @@
     "eslint-plugin-react": "^7.14.3",
     "metro-react-native-babel-preset": "^0.56.0",
     "prettier": "^1.18.2",
-    "react-navigation-tabs": "^2.5.6",
-    "react-native-safe-area-view": "latest"
+    "react-native-safe-area-view": "latest",
+    "react-navigation-tabs": "^2.5.6"
   },
   "private": true
 }
