--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "^2.0.0-beta.2",
     "react-native-svg": "~9.5.1",
-    "react-native-webview": "^8.0.6",
+    "react-native-webview": "^8.1.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3"
@@ -52,8 +52,8 @@
     "eslint-plugin-react": "^7.14.3",
     "metro-react-native-babel-preset": "^0.56.0",
     "prettier": "^1.18.2",
-    "react-native-safe-area-view": "latest",
-    "react-navigation-tabs": "^2.5.6"
+    "react-navigation-tabs": "^2.5.6",
+    "react-native-safe-area-view": "latest"
   },
   "private": true
 }
