--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.2.0",
     "react-native-svg": "9.9.5",
-    "react-native-safe-area-context": "^0.6.4",
-    "react-native-screens": "^2.0.0-beta.2",
-    "react-native-webview": "^8.1.0",
+    "react-native-safe-area-context": "~0.3.6",
+    "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-webview": "7.0.5",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^1.10.3",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
