--- a/.github/workflows/checkLint.yml
+++ b/.github/workflows/checkLint.yml
@@ -9,5 +9,7 @@ jobs:
     steps:
     - name: ESLint Action
       uses: hallee/eslint-action@1.0.1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
 
 
