--- a/.github/workflows/checkLint.yml
+++ b/.github/workflows/checkLint.yml
@@ -28,3 +28,4 @@ jobs:
           # Enable linters
           eslint: true
           prettier: true
+          auto_fix: ${{ github.event_name == 'pull_request' }}
