--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-webview": "7.0.5",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
@@ -53,7 +54,6 @@
     "eslint-plugin-react": "^7.14.3",
     "metro-react-native-babel-preset": "^0.56.0",
     "prettier": "^1.18.2",
-    "react-navigation-tabs": "^2.5.6",
     "react-native-safe-area-view": "latest"
   },
   "private": true
