Add different extensions recognition

--- a/app.json
+++ b/app.json
@@ -40,6 +40,9 @@
           "location"
         ]
       }
+    },
+    "packagerOpts": {
+      "sourceExts": ["js", "json", "ts", "tsx", "jsx"]
     }
   }
 }
