--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.5.6"
+    "react-navigation-tabs": "^2.5.6",
+    "react-native-safe-area-view": "latest"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
@@ -53,8 +54,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "metro-react-native-babel-preset": "^0.56.0",
-    "prettier": "^1.18.2",
-    "react-native-safe-area-view": "latest"
+    "prettier": "^1.18.2"
   },
   "private": true
 }
