--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/drawer": "^5.0.0",
     "@react-navigation/native": "^5.0.0",
     "axios": "^0.19.0",
+    "exp": "^57.2.1",
     "expo": "^36.0.0",
+    "expo-constants": "~8.0.0",
     "expo-google-app-auth": "^6.0.0",
     "expo-image-picker": "~8.0.1",
     "expo-localization": "~8.0.0",
