Create chat link input and link format validation

--- a/app.json
+++ b/app.json
@@ -55,5 +55,8 @@
       ]
     },
     "description": ""
-  }
+  },
+  "facebookScheme": "fb514468925892032",
+  "facebookAppId": "514468925892032",
+  "facebookDisplayName": "Krakostop"
 }
