--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exp": "^57.2.1",
     "expo": "^36.0.0",
     "expo-constants": "~8.0.0",
+    "expo-facebook": "^8.0.0",
     "expo-google-app-auth": "^6.0.0",
     "expo-image-picker": "~8.0.1",
     "expo-localization": "~8.0.0",
