--- a/app.json
+++ b/app.json
@@ -23,13 +23,13 @@
       "assets/*"
     ],
     "android": {
-      "package": "eu.krakostop.app.android",
+      "package": "eu.krakostop.krakostopapp",
       "config": {
         "googleMaps": {
           "apiKey": "Should be updated before build"
         }
       },
-      "versionCode": 1
+      "versionCode": 2
     },
     "ios": {
       "supportsTablet": true,
