--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-fbsdk": "^1.1.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-map-clustering": "^3.1.2",
     "react-native-maps": "0.26.1",
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.4.0",
