--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
       "assets/*"
     ],
     "android": {
-      "package": "eu.krakostop.krakostopapp",
+      "package": "eu.krakostop.app.android",
       "config": {
         "googleMaps": {
           "apiKey": "Should be updated before build"
