Stylize phone button

--- a/app.json
+++ b/app.json
@@ -26,10 +26,10 @@
       "package": "eu.krakostop.krakostopapp",
       "config": {
         "googleMaps": {
-          "apiKey": "Should be updated before build"
+          "apiKey": "AIzaSyDIyJpLqNDRo4hQk6qDtSQrp8itclO1odU"
         }
       },
-      "versionCode": 2
+      "versionCode": 3
     },
     "ios": {
       "supportsTablet": true,
