--- a/app.json
+++ b/app.json
@@ -10,9 +10,8 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/app_icon.png",
     "splash": {
-      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -26,7 +25,7 @@
       "package": "eu.krakostop.krakostopapp",
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyDIyJpLqNDRo4hQk6qDtSQrp8itclO1odU"
+          "apiKey": "Should be updated before build"
         }
       },
       "versionCode": 3
