--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.0",
     "exp": "^57.2.1",
     "expo": "^36.0.0",
+    "expo-asset": "^8.0.0",
     "expo-constants": "~8.0.0",
     "expo-facebook": "^8.0.0",
     "expo-google-app-auth": "^6.0.0",
