--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
       "package": "eu.krakostop.krakostopapp",
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyDIyJpLqNDRo4hQk6qDtSQrp8itclO1odU"
+          "apiKey": "Should be updated before build"
         }
       },
       "versionCode": 3
