Customized splash screen, remove unused images (#49)
* Create custom splash screen

Remove unused assets

Add background cashing to splash screen

Put all static files require inside Images.js

Fix user data refreshing and add minimal show time to splash screen

* Merge branch 'master' of /home/pecatoma/Dokumenty/krakostop/krakostop-mobile-frontend with conflicts.

* Change splash screen gif

* Remove line breaking from ParticipantNameView

--- a/app.json
+++ b/app.json
@@ -10,9 +10,8 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/app_icon.png",
     "splash": {
-      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
